cargo-features = ["edition2024"]

[package]
name = "rtks_angels"
edition = "2024"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
rtic = { version = "2.0.1", features = ["thumbv7-backend", "rtic-monotonics"] }
panic-halt = "0.2.0"
defmt-rtt = { version = "0.4.0" }
rtic-sync = "1.0.2"
stm32f4xx-hal = { version = "0.22.0", features = ["stm32f429", "rtic2"] }
